--- a/src/components/molecules/dropdown-link/dropdown-link.css
+++ b/src/components/molecules/dropdown-link/dropdown-link.css
@@ -1,6 +1,10 @@
 :host {
   display: block;
-  --blue-color: #112e51;
+  --bg-blue-900: #112e51;
+  --bg-gray-900: #35383a;
+  --text-blue-500: #0071bc;
+  --text-white: #ffffff;
+  --bg-white: #ffffff;
 }
 
 .dropdown-link-button {
@@ -15,18 +19,36 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.dropdown-link--open .dropdown-link-button-theme--blue {
-  background-color: var(--blue-color);
-  color: white;
+.dropdown-link-button-theme--white {
+  color: var(--text-white);
 }
 
-.dropdown-link-button-theme--white {
-  color: white;
+.dropdown-link-button-theme--dark {
+  color: var(--text-white);
+}
+
+.dropdown-link-button-theme--dark-blue {
+  color: var(--text-white);
+}
+
+.dropdown-link--open .dropdown-link-button-theme--blue {
+  background-color: var(--bg-blue-900);
+  color: var(--text-white);
 }
 
 .dropdown-link--open .dropdown-link-button-theme--white {
-  background-color: white;
-  color: var(--blue-color);
+  background-color: var(--bg-white);
+  color: var(--text-blue-500);
+}
+
+.dropdown-link--open .dropdown-link-button-theme--dark {
+  background-color: var(--bg-gray-900);
+  color: var(--text-white);
+}
+
+.dropdown-link--open .dropdown-link-button-theme--dark-blue {
+  background-color: var(--bg-blue-900);
+  color: var(--text-white);
 }
 
 .dropdown-link-button-text {
@@ -58,11 +80,21 @@
 }
 
 .dropdown-panel-theme--white {
-  background-color: white;
-  color: var(--blue-color);
+  background-color: var(--bg-white);
+  color: var(--text-blue-500);
 }
 
 .dropdown-panel-theme--blue {
-  background-color: var(--blue-color);
-  color: white;
+  background-color: var(--bg-blue-900);
+  color: var(--text-white);
+}
+
+.dropdown-panel-theme--dark {
+  background-color: var(--bg-gray-900);
+  color: var(--text-white);
+}
+
+.dropdown-panel-theme--dark-blue {
+  background-color: var(--bg-blue-900);
+  color: var(--text-white);
 }
