--- a/src/components/molecules/header-component/header-component.css
+++ b/src/components/molecules/header-component/header-component.css
@@ -6,7 +6,8 @@
   --nav-theme--dark: #25282a;
 
   --header-text-size--default: 14pt;
-  --header-font-family--default: Source Sans Pro Web, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
+  --header-font-family--default: Source Sans Pro Web, Helvetica Neue, Helvetica,
+    Roboto, Arial, sans-serif;
 
   --header-size--slim: 72px;
   --header-size--normal: 90px;
