--- a/src/components/atoms/button-component/button-component.css
+++ b/src/components/atoms/button-component/button-component.css
@@ -1,450 +1,286 @@
-:host {
-  --default-background-color: #005ea2;
-  --default-hover-background: #1a4480;
-  --default-active-background: #162e51;
-  --default-focus-outline-color: #2491ff;
-  --default-font-color: #fff;
-
-  --secondary-background-color: #d83933;
-  --secondary-hover-background: #b50909;
-  --secondary-active-background: #8b0a03;
-  --secondary-focus-outline-color: #2491ff;
-  --secondary-font-color: #fff;
-
-  --unstyled-font-color: #005ea2;
-  --unstyled-background-color: transparent;
-
-  --disabled-color: #c9c9c9;
-  --font-family: Source Sans Pro Web, Helvetica Neue, Helvetica, Roboto, Arial, sans-serif;
-  --font-size: 1.06rem;
-  --font-weight: 700;
-  --button-padding: 0.75rem 1.25rem;
-
-  --primary-color: #0071bc;
-  --secondary-color: #02bfe7;
-  --danger-color: #e51c3e;
-  --success-color: #2e8540;
-  --warning-color: #fdb81e;
-  --base-color: rgb(50, 50, 51);
-  --inverse-color: lightgrey;
-  --default-color: #e3e3e3;
-
-  --primary-color-hover: #205493;
-  --secondary-color-hover: #00a6d2;
-  --success-color-hover: #266e35;
-  --warning-color-hover: #c05600;
-  --danger-color-hover: #b31e22;
-
-  --primary-color-active: #112e51;
-  --secondary-color-active: #046b99;
-  --success-color-active: #174320;
-  --warning-color-active: #775540;
-  --danger-color-active: #981b1f;
-
-  --box-shadow-color: #3d94d0;
-
-  display: block;
-}
-
-.svg-right {
-  margin-left: 10px;
-}
-.svg-left {
-  margin-right: 10px;
+*,
+::before,
+::after {
+  box-sizing: border-box;
+  border-width: 0;
+  border-style: solid;
+  border-color: #e5e7eb;
 }
 
 button {
-  margin-top: 10%;
+  font-family: inherit;
+  font-size: 100%;
+  font-weight: inherit;
+  line-height: inherit;
+  color: inherit;
+  margin: 0;
+  padding: 0;
 }
 
-.storybook-button {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  border: 0;
-  border-radius: 5px;
+button {
+  text-transform: none;
+}
+
+button,
+[type="button"],
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+  background-color: transparent;
+  background-image: none;
+}
+
+button,
+[role="button"] {
   cursor: pointer;
+}
+
+.inline-block {
   display: inline-block;
-  line-height: 1;
 }
 
-.storybook-button--small {
-  font-size: 12px;
-  padding: 10px 16px;
-}
-.storybook-button--medium {
-  font-size: 14px;
-  padding: 11px 20px;
-}
-.storybook-button--large {
-  font-size: 16px;
-  padding: 12px 24px;
-}
-.storybook-button--extralarge {
-  font-size: 16px;
-  padding: 20px 32px;
+.inline-flex {
+  display: inline-flex;
 }
 
-/* Button primary design */
-.storybook-button--primary-filled {
-  color: white;
-  background-color: var(--primary-color);
+.h-5 {
+  height: 1.25rem;
 }
-.storybook-button--primary-hover {
-  color: white;
-  background-color: var(--primary-color-hover);
-}
-.storybook-button--primary-active {
-  color: white;
-  background-color: var(--primary-color-active);
-}
-.storybook-button--primary-focus {
-  color: white;
-  outline: 2px solid var(--box-shadow-color);
-  outline-offset: 0.25em;
-  background-color: var(--primary-color);
-}
-.storybook-button--primary-default {
-  color: #4f4f4f;
-  background-color: var(--default-color);
-}
-.storybook-button--primary-filled-outlined {
-  color: var(--primary-color);
-  background: transparent;
-  border: 2px solid var(--primary-color);
-}
-.storybook-button--primary-hover-outlined {
-  color: var(--primary-color-hover);
-  background: transparent;
-  border: 2px solid var(--primary-color-hover);
-}
-.storybook-button--primary-active-outlined {
-  color: var(--primary-color-active);
-  background: transparent;
-  border: 2px solid var(--primary-color-active);
-}
-.storybook-button--primary-focus-outlined {
-  color: var(--primary-color);
-  background: transparent;
-  outline: 2px solid var(--box-shadow-color);
-  outline-offset: 0.25em;
-  border: 2px solid var(--success-color);
-}
-.storybook-button--primary-default-outlined {
-  color: #4f4f4f;
-  background: transparent;
-  border: 2px solid var(--default-color);
-}
-.storybook-button--primary-filled-link {
-  color: var(--primary-color);
-  background: transparent;
-}
-.storybook-button--primary-hover-link {
-  color: var(--primary-color-hover);
-  background: transparent;
-}
-.storybook-button--primary-active-link {
-  color: var(--primary-color-active);
-  background: transparent;
-}
-.storybook-button--primary-focus-link {
-  color: var(--primary-color);
-  background: transparent;
-  border: 2px solid #3d94d0;
-}
-.storybook-button--primary-default-link {
-  color: #4f4f4f;
-  background: transparent;
-}
-/* End of Button primary design */
 
-/* Button secondary design */
-.storybook-button--secondary-filled {
-  color: #000000;
-  background-color: var(--secondary-color);
+.w-5 {
+  width: 1.25rem;
 }
-.storybook-button--secondary-hover {
-  color: #000000;
-  background-color: var(--secondary-color-hover);
-}
-.storybook-button--secondary-active {
-  color: #ffffff;
-  background-color: var(--secondary-color-active);
-}
-.storybook-button--secondary-focus {
-  color: #ffffff;
-  outline: 2px solid var(--box-shadow-color);
-  outline-offset: 0.25em;
-  background-color: var(--secondary-color);
-}
-.storybook-button--secondary-default {
-  color: #4f4f4f;
-  background-color: var(--default-color);
-}
-.storybook-button--secondary-filled-outlined {
-  color: #046b99;
-  background: transparent;
-  border: 2px solid var(--secondary-color);
-}
-.storybook-button--secondary-hover-outlined {
-  color: #046b99;
-  background: transparent;
-  border: 2px solid var(--secondary-color-hover);
-}
-.storybook-button--secondary-active-outlined {
-  color: #046b99;
-  background: transparent;
-  border: 2px solid var(--secondary-color-active);
-}
-.storybook-button--secondary-focus-outlined {
-  color: #046b99;
-  background: transparent;
-  outline: 2px solid var(--box-shadow-color);
-  outline-offset: 0.25em;
-  border: 2px solid var(--success-color);
-}
-.storybook-button--secondary-default-outlined {
-  color: #4f4f4f;
-  background: transparent;
-  border: 2px solid var(--default-color);
-}
-.storybook-button--secondary-filled-link {
-  color: #046b99;
-  background: transparent;
-}
-.storybook-button--secondary-hover-link {
-  color: #046b99;
-  background: transparent;
-}
-.storybook-button--secondary-active-link {
-  color: #046b99;
-  background: transparent;
-}
-.storybook-button--secondary-focus-link {
-  color: #046b99;
-  background: transparent;
-  border: 2px solid #3d94d0;
-}
-.storybook-button--secondary-default-link {
-  color: #4f4f4f;
-  background: transparent;
-}
-/* End of Button secondary design */
 
-/* Button success design */
-.storybook-button--success-filled {
-  color: #ffffff;
-  background-color: var(--success-color);
+.items-center {
+  align-items: center;
 }
-.storybook-button--success-hover {
-  color: #ffffff;
-  background-color: var(--success-color-hover);
-}
-.storybook-button--success-active {
-  color: #ffffff;
-  background-color: var(--success-color-active);
-}
-.storybook-button--success-focus {
-  color: #ffffff;
-  outline: 2px solid var(--box-shadow-color);
-  outline-offset: 0.25em;
-  background-color: var(--success-color);
-}
-.storybook-button--success-default {
-  color: #4f4f4f;
-  background: transparent;
-  border: 2px solid var(--default-color);
-}
-.storybook-button--success-filled-outlined {
-  color: #2e8540;
-  background: transparent;
-  border: 2px solid var(--success-color);
-}
-.storybook-button--success-hover-outlined {
-  color: #2e8540;
-  background: transparent;
-  border: 2px solid var(--success-color-hover);
-}
-.storybook-button--success-active-outlined {
-  color: #174320;
-  background: transparent;
-  border: 2px solid var(--success-color-active);
-}
-.storybook-button--success-focus-outlined {
-  color: #2e8540;
-  background: transparent;
-  outline: 2px solid var(--box-shadow-color);
-  outline-offset: 0.25em;
-  border: 2px solid var(--success-color);
-}
-.storybook-button--success-default-outlined {
-  color: #4f4f4f;
-  background: transparent;
-  border: 2px solid var(--default-color);
-}
-.storybook-button--success-filled-link {
-  color: #2e8540;
-  background: transparent;
-}
-.storybook-button--success-hover-link {
-  color: #2e8540;
-  background: transparent;
-}
-.storybook-button--success-active-link {
-  color: #174320;
-  background: transparent;
-}
-.storybook-button--success-focus-link {
-  color: #2e8540;
-  background: transparent;
-  border: 2px solid #3d94d0;
-}
-.storybook-button--success-default-link {
-  color: #4f4f4f;
-  background: transparent;
-}
-/* End of Button success design */
 
-/* Button warning design */
-.storybook-button--warning-filled {
-  color: #171717;
-  background-color: var(--warning-color);
+.rounded {
+  border-radius: 0.25rem;
 }
-.storybook-button--warning-hover {
-  color: #ffffff;
-  background-color: var(--warning-color-hover);
-}
-.storybook-button--warning-active {
-  color: #ffffff;
-  background-color: var(--warning-color-active);
-}
-.storybook-button--warning-focus {
-  color: #ffffff;
-  outline: 2px solid var(--box-shadow-color);
-  outline-offset: 0.25em;
-  background-color: var(--warning-color);
-}
-.storybook-button--warning-default {
-  color: #4f4f4f;
-  background-color: var(--default-color);
-}
-.storybook-button--warning-filled-outlined {
-  color: #171717;
-  background: transparent;
-  border: 2px solid var(--warning-color);
-}
-.storybook-button--warning-hover-outlined {
-  color: #171717;
-  background: transparent;
-  border: 2px solid var(--warning-color-hover);
-}
-.storybook-button--warning-active-outlined {
-  color: #171717;
-  background: transparent;
-  border: 2px solid var(--warning-color-active);
-}
-.storybook-button--warning-focus-outlined {
-  color: #171717;
-  background: transparent;
-  outline: 2px solid var(--box-shadow-color);
-  outline-offset: 0.25em;
-  border: 2px solid var(--success-color);
-}
-.storybook-button--warning-default-outlined {
-  color: #4f4f4f;
-  background: transparent;
-  border: 2px solid var(--default-color);
-}
-.storybook-button--warning-filled-link {
-  color: #171717;
-  background: transparent;
-}
-.storybook-button--warning-hover-link {
-  color: #171717;
-  background: transparent;
-}
-.storybook-button--warning-active-link {
-  color: #171717;
-  background: transparent;
-}
-.storybook-button--warning-focus-link {
-  color: #171717;
-  background: transparent;
-  border: 2px solid #3d94d0;
-}
-.storybook-button--warning-default-link {
-  color: #4f4f4f;
-  background: transparent;
-}
-/* End of Button warning design */
 
-/* Button danger design */
-.storybook-button--danger-filled {
-  color: #ffffff;
-  background-color: var(--danger-color);
+.border-2 {
+  border-width: 2px;
 }
-.storybook-button--danger-hover {
-  color: #ffffff;
-  background-color: var(--danger-color-hover);
+
+.border-blue-600 {
+  --border-opacity: 1;
+  border-color: rgb(0 113 188 / var(--border-opacity));
 }
-.storybook-button--danger-active {
-  color: #ffffff;
-  background-color: var(--danger-color-active);
+
+.border-green-600 {
+  --border-opacity: 1;
+  border-color: rgb(46 133 64 / var(--border-opacity));
 }
-.storybook-button--danger-focus {
-  color: #ffffff;
-  outline: 2px solid var(--box-shadow-color);
-  outline-offset: 0.25em;
-  background-color: var(--danger-color);
+
+.border-red-600 {
+  --border-opacity: 1;
+  border-color: rgb(229 28 62 / var(--border-opacity));
 }
-.storybook-button--danger-default {
-  color: #4f4f4f;
-  background-color: var(--default-color);
+
+.border-sky-400 {
+  --border-opacity: 1;
+  border-color: rgb(2 191 231 / var(--border-opacity));
 }
-.storybook-button--danger-filled-outlined {
-  color: #e51c3e;
-  background: transparent;
-  border: 2px solid var(--danger-color);
+
+.border-transparent {
+  border-color: transparent;
 }
-.storybook-button--danger-hover-outlined {
-  color: #b31e22;
-  background: transparent;
-  border: 2px solid var(--danger-color-hover);
+
+.border-yellow-600 {
+  --border-opacity: 1;
+  border-color: rgb(253 184 30 / var(--border-opacity));
 }
-.storybook-button--danger-active-outlined {
-  color: #981b1f;
-  background: transparent;
-  border: 2px solid var(--danger-color-active);
+
+.bg-blue-600 {
+  --bg-opacity: 1;
+  background-color: rgb(0 113 188 / var(--bg-opacity));
 }
-.storybook-button--danger-focus-outlined {
-  color: #e51c3e;
-  background: transparent;
-  outline: 2px solid var(--box-shadow-color);
-  outline-offset: 0.25em;
-  border: 2px solid var(--success-color);
+
+.bg-green-600 {
+  --bg-opacity: 1;
+  background-color: rgb(46 133 64 / var(--bg-opacity));
 }
-.storybook-button--danger-default-outlined {
-  color: #4f4f4f;
-  background: transparent;
-  border: 2px solid var(--default-color);
+
+.bg-red-600 {
+  --bg-opacity: 1;
+  background-color: rgb(229 28 62 / var(--bg-opacity));
 }
-.storybook-button--danger-filled-link {
-  color: #e51c3e;
-  background: transparent;
+
+.bg-sky-400 {
+  --bg-opacity: 1;
+  background-color: rgb(2 191 231 / var(--bg-opacity));
 }
-.storybook-button--danger-hover-link {
-  color: #b31e22;
-  background: transparent;
+
+.bg-yellow-600 {
+  --bg-opacity: 1;
+  background-color: rgb(253 184 30 / var(--bg-opacity));
 }
-.storybook-button--danger-active-link {
-  color: #981b1f;
-  background: transparent;
+
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
-.storybook-button--danger-focus-link {
-  color: #e51c3e;
-  background: transparent;
-  border: 2px solid #3d94d0;
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
-.storybook-button--danger-default-link {
-  color: #4f4f4f;
-  background: transparent;
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pl-2\.5 {
+  padding-left: 0.625rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
+}
+
+.pr-2\.5 {
+  padding-right: 0.625rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.text-blue-600 {
+  --text-opacity: 1;
+  color: rgb(0 113 188 / var(--text-opacity));
+}
+
+.text-green-600 {
+  --text-opacity: 1;
+  color: rgb(46 133 64 / var(--text-opacity));
+}
+
+.text-red-600 {
+  --text-opacity: 1;
+  color: rgb(229 28 62 / var(--text-opacity));
+}
+
+.text-sky-400 {
+  --text-opacity: 1;
+  color: rgb(2 191 231 / var(--text-opacity));
+}
+
+.text-white {
+  --text-opacity: 1;
+  color: rgb(255 255 255 / var(--text-opacity));
+}
+
+.text-yellow-600 {
+  --text-opacity: 1;
+  color: rgb(253 184 30 / var(--text-opacity));
+}
+
+.hover\:bg-blue-700:hover {
+  --bg-opacity: 1;
+  background-color: rgb(32 84 147 / var(--bg-opacity));
+}
+
+.hover\:bg-green-700:hover {
+  --bg-opacity: 1;
+  background-color: rgb(21 128 61 / var(--bg-opacity));
+}
+
+.hover\:bg-red-700:hover {
+  --bg-opacity: 1;
+  background-color: rgb(185 28 28 / var(--bg-opacity));
+}
+
+.hover\:bg-sky-500:hover {
+  --bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--bg-opacity));
+}
+
+.hover\:bg-yellow-700:hover {
+  --bg-opacity: 1;
+  background-color: rgb(161 98 7 / var(--bg-opacity));
+}
+
+.focus\:ring:focus {
+  --ring-offset-shadow: var(--ring-inset) 0 0 0 var(--ring-offset-width)
+    var(--ring-offset-color);
+  --ring-shadow: var(--ring-inset) 0 0 0 calc(3px + var(--ring-offset-width))
+    var(--ring-color);
+  box-shadow: var(--ring-offset-shadow), var(--ring-shadow),
+    var(--shadow, 0 0 #0000);
+}
+
+.focus\:ring-blue-600:focus {
+  --ring-opacity: 1;
+  --ring-color: rgb(0 113 188 / var(--ring-opacity));
+}
+
+.focus\:ring-green-600:focus {
+  --ring-opacity: 1;
+  --ring-color: rgb(46 133 64 / var(--ring-opacity));
+}
+
+.focus\:ring-red-600:focus {
+  --ring-opacity: 1;
+  --ring-color: rgb(229 28 62 / var(--ring-opacity));
+}
+
+.focus\:ring-sky-400:focus {
+  --ring-opacity: 1;
+  --ring-color: rgb(2 191 231 / var(--ring-opacity));
+}
+
+.focus\:ring-yellow-600:focus {
+  --ring-opacity: 1;
+  --ring-color: rgb(253 184 30 / var(--ring-opacity));
+}
+
+.focus\:ring-offset-2:focus {
+  --ring-offset-width: 2px;
+}
+
+.active\:bg-blue-900:active {
+  --bg-opacity: 1;
+  background-color: rgb(17 46 81 / var(--bg-opacity));
+}
+
+.active\:bg-green-900:active {
+  --bg-opacity: 1;
+  background-color: rgb(20 83 45 / var(--bg-opacity));
+}
+
+.active\:bg-red-900:active {
+  --bg-opacity: 1;
+  background-color: rgb(127 29 29 / var(--bg-opacity));
+}
+
+.active\:bg-sky-700:active {
+  --bg-opacity: 1;
+  background-color: rgb(3 105 161 / var(--bg-opacity));
+}
+
+.active\:bg-yellow-900:active {
+  --bg-opacity: 1;
+  background-color: rgb(113 63 18 / var(--bg-opacity));
+}
+
+.disabled\:bg-gray-300:disabled {
+  --bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--bg-opacity));
+}
+
+.disabled\:text-gray-700:disabled {
+  --text-opacity: 1;
+  color: rgb(55 65 81 / var(--text-opacity));
+}
+
+.disabled\:border-gray-500:disabled {
+  --border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--border-opacity));
 }
