--- a/src/components/atoms/input-component/input-component.css
+++ b/src/components/atoms/input-component/input-component.css
@@ -2,30 +2,19 @@
 ::before,
 ::after {
   box-sizing: border-box;
-  /* 1 */
   border-width: 0;
-  /* 2 */
   border-style: solid;
-  /* 2 */
   border-color: #e5e7eb;
-  /* 2 */
 }
 
 input {
   font-family: inherit;
-  /* 1 */
   font-size: 100%;
-  /* 1 */
   font-weight: inherit;
-  /* 1 */
   line-height: inherit;
-  /* 1 */
   color: inherit;
-  /* 1 */
   margin: 0;
-  /* 2 */
   padding: 0;
-  /* 3 */
 }
 
 :-moz-focusring {
@@ -243,28 +232,55 @@ input::placeholder {
   outline: 1px auto -webkit-focus-ring-color;
 }
 
-.inline-block {
-  display: inline-block;
+.mb-1\.5 {
+  margin-bottom: 0.375rem;
 }
 
-.flex {
-  display: flex;
+.block {
+  display: block;
 }
 
-.items-center {
-  align-items: center;
+.border-green-600 {
+  --border-opacity: 1;
+  border-color: rgb(46 133 64 / var(--border-opacity));
 }
 
-.gap-x-2\.5 {
-  column-gap: 0.625rem;
+.border-red-600 {
+  --border-opacity: 1;
+  border-color: rgb(229 28 62 / var(--border-opacity));
 }
 
-.text-blue-600 {
-  --text-opacity: 1;
-  color: rgb(0 113 188 / var(--text-opacity));
+.focus\:border-blue-500:focus {
+  --border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--border-opacity));
 }
 
-.focus\:ring-blue-600:focus {
+.focus\:border-green-600:focus {
+  --border-opacity: 1;
+  border-color: rgb(46 133 64 / var(--border-opacity));
+}
+
+.focus\:border-red-600:focus {
+  --border-opacity: 1;
+  border-color: rgb(229 28 62 / var(--border-opacity));
+}
+
+.focus\:ring-blue-500:focus {
   --ring-opacity: 1;
-  --ring-color: rgb(0 113 188 / var(--ring-opacity));
+  --ring-color: rgb(59 130 246 / var(--ring-opacity));
+}
+
+.focus\:ring-green-600:focus {
+  --ring-opacity: 1;
+  --ring-color: rgb(46 133 64 / var(--ring-opacity));
+}
+
+.focus\:ring-red-600:focus {
+  --ring-opacity: 1;
+  --ring-color: rgb(229 28 62 / var(--ring-opacity));
+}
+
+.disabled\:border-gray-500:disabled {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
