--- a/src/components/molecules/dropdown-link/dropdown-link.css
+++ b/src/components/molecules/dropdown-link/dropdown-link.css
@@ -16,7 +16,8 @@
   font-size: 0.875rem;
   background-color: transparent;
   border: none;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .dropdown-link-button-theme--white {
