--- a/src/components/molecules/dropdown-panel-link/dropdown-panel-link.css
+++ b/src/components/molecules/dropdown-panel-link/dropdown-panel-link.css
@@ -7,5 +7,6 @@
   font-weight: 400;
   font-size: 0.875rem;
   cursor: pointer;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
