--- a/src/components/atoms/textarea-component/textarea-component.css
+++ b/src/components/atoms/textarea-component/textarea-component.css
@@ -74,6 +74,10 @@ textarea::placeholder {
   opacity: 1;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .mb-1\.5 {
   margin-bottom: 0.375rem;
 }
