--- a/src/components/atoms/input-component/input-component.css
+++ b/src/components/atoms/input-component/input-component.css
@@ -232,6 +232,10 @@ input::placeholder {
   outline: 1px auto -webkit-focus-ring-color;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .mb-1\.5 {
   margin-bottom: 0.375rem;
 }
