--- a/src/components/atoms/checkbox-component/checkbox-component.css
+++ b/src/components/atoms/checkbox-component/checkbox-component.css
@@ -243,28 +243,70 @@ input::placeholder {
   outline: 1px auto -webkit-focus-ring-color;
 }
 
-.inline-block {
-  display: inline-block;
+.inline-flex {
+  display: inline-flex;
 }
 
-.flex {
-  display: flex;
+.h-6 {
+  height: 1.5rem;
+}
+
+.w-6 {
+  width: 1.5rem;
 }
 
 .items-center {
   align-items: center;
 }
 
-.gap-x-2\.5 {
-  column-gap: 0.625rem;
+.gap-x-2 {
+  column-gap: 0.5rem;
 }
 
-.text-blue-600 {
-  --text-opacity: 1;
-  color: rgb(0 113 188 / var(--text-opacity));
+.border-2 {
+  border-width: 2px;
 }
 
-.focus\:ring-blue-600:focus {
-  --ring-opacity: 1;
-  --ring-color: rgb(0 113 188 / var(--ring-opacity));
+.border-\[\#AEB0B5\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(174 176 181 / var(--tw-border-opacity));
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
+.text-\[\#212121\] {
+  --tw-text-opacity: 1;
+  color: rgb(33 33 33 / var(--tw-text-opacity));
+}
+
+.checked\:text-\[\#0071BC\]:checked {
+  --tw-text-opacity: 1;
+  color: rgb(0 113 188 / var(--tw-text-opacity));
+}
+
+.focus\:ring-0:focus {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+    calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow),
+    var(--tw-shadow, 0 0 #0000);
+}
+
+.disabled\:border-\[\#C9C9C9\]:disabled {
+  --tw-border-opacity: 1;
+  border-color: rgb(201 201 201 / var(--tw-border-opacity));
+}
+
+.disabled\:bg-\[\#E6E6E6\]:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(230 230 230 / var(--tw-bg-opacity));
+}
+
+.peer:disabled ~ .peer-disabled\:text-\[\#C9C9C9\] {
+  --tw-text-opacity: 1;
+  color: rgb(201 201 201 / var(--tw-text-opacity));
 }
