--- a/src/components/atoms/textarea-component/textarea-component.css
+++ b/src/components/atoms/textarea-component/textarea-component.css
@@ -57,15 +57,15 @@ textarea {
 textarea:focus {
   outline: 2px solid transparent;
   outline-offset: 2px;
-  --ring-inset: var(--empty, /*!*/ /*!*/);
-  --ring-offset-width: 0px;
-  --ring-offset-color: #fff;
-  --ring-color: #2563eb;
-  --ring-offset-shadow: var(--ring-inset) 0 0 0 var(--ring-offset-width)
-    var(--ring-offset-color);
-  --ring-shadow: var(--ring-inset) 0 0 0 calc(1px + var(--ring-offset-width))
-    var(--ring-color);
-  box-shadow: var(--ring-offset-shadow), var(--ring-shadow), var(--shadow);
+  --tw-ring-inset: var(--empty, /*!*/ /*!*/);
+  --tw-ring-offset-width: 0px;
+  --tw-ring-offset-color: #fff;
+  --tw-ring-color: #2563eb;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
+    var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0
+    calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--shadow);
   border-color: #2563eb;
 }
 
@@ -74,88 +74,94 @@ textarea::placeholder {
   opacity: 1;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
-.mb-1\.5 {
-  margin-bottom: 0.375rem;
-}
-
-.block {
-  display: block;
-}
-
-.inline-flex {
-  display: inline-flex;
-}
-
-.flex-col {
-  flex-direction: column;
-}
-
-.gap-y-2\.5 {
-  row-gap: 0.625rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
+.flex {
+  display: flex;
 }
 
 .resize-none {
   resize: none;
 }
 
+.flex-col {
+  flex-direction: column;
+}
+
+.items-start {
+  align-items: flex-start;
+}
+
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
 .border-l-2 {
   border-left-width: 2px;
 }
 
-.text-red-600 {
-  --text-opacity: 1;
-  color: rgb(229 28 62 / var(--text-opacity));
-}
-
-.border-green-600 {
-  --border-opacity: 1;
-  border-color: rgb(46 133 64 / var(--border-opacity));
-}
-
-.border-red-600 {
-  --border-opacity: 1;
-  border-color: rgb(229 28 62 / var(--border-opacity));
-}
-
-.focus\:border-blue-500:focus {
-  --border-opacity: 1;
-  border-color: rgb(59 130 246 / var(--border-opacity));
-}
-
-.focus\:border-green-600:focus {
-  --border-opacity: 1;
-  border-color: rgb(46 133 64 / var(--border-opacity));
-}
-
-.focus\:border-red-600:focus {
-  --border-opacity: 1;
-  border-color: rgb(229 28 62 / var(--border-opacity));
-}
-
-.focus\:ring-blue-500:focus {
-  --ring-opacity: 1;
-  --ring-color: rgb(59 130 246 / var(--ring-opacity));
-}
-
-.focus\:ring-green-600:focus {
-  --ring-opacity: 1;
-  --ring-color: rgb(46 133 64 / var(--ring-opacity));
-}
-
-.focus\:ring-red-600:focus {
-  --ring-opacity: 1;
-  --ring-color: rgb(229 28 62 / var(--ring-opacity));
-}
-
-.disabled\:border-gray-500:disabled {
+.border-\[\#1B1B1B\] {
   --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+  border-color: rgb(27 27 27 / var(--tw-border-opacity));
+}
+
+.border-\[\#2E8540\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(46 133 64 / var(--tw-border-opacity));
+}
+
+.border-\[\#E51C3E\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 28 62 / var(--tw-border-opacity));
+}
+
+.pl-4 {
+  padding-left: 1rem;
+}
+
+.font-bold {
+  font-weight: 700;
+}
+
+.text-\[\#212121\] {
+  --tw-text-opacity: 1;
+  color: rgb(33 33 33 / var(--tw-text-opacity));
+}
+
+.text-\[\#71767A\] {
+  --tw-text-opacity: 1;
+  color: rgb(113 118 122 / var(--tw-text-opacity));
+}
+
+.text-\[\#E51C3E\] {
+  --tw-text-opacity: 1;
+  color: rgb(229 28 62 / var(--tw-text-opacity));
+}
+
+.focus\:border-\[\#2E8540\]:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(46 133 64 / var(--tw-border-opacity));
+}
+
+.focus\:border-\[\#3D94D0\]:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(61 148 208 / var(--tw-border-opacity));
+}
+
+.focus\:border-\[\#E51C3E\]:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 28 62 / var(--tw-border-opacity));
+}
+
+.focus\:ring-\[\#2E8540\]:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(46 133 64 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-\[\#3D94D0\]:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(61 148 208 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-\[\#E51C3E\]:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(229 28 62 / var(--tw-ring-opacity));
 }
