--- a/src/components/atoms/button-component/button-component.css
+++ b/src/components/atoms/button-component/button-component.css
@@ -8,7 +8,7 @@
 }
 
 button {
-  font-family: inherit;
+  font-family: "Open Sans", sans-serif !important;
   font-size: 100%;
   font-weight: inherit;
   line-height: inherit;
@@ -16,6 +16,7 @@ button {
   margin: 0;
   padding: 0;
 }
+
 
 button {
   text-transform: none;
