--- a/src/components/atoms/radio-button/radio-button.css
+++ b/src/components/atoms/radio-button/radio-button.css
@@ -12,7 +12,7 @@
 }
 
 input {
-  font-family: inherit;
+  font-family: "Open Sans", sans-serif !important;
   /* 1 */
   font-size: 100%;
   /* 1 */
@@ -50,7 +50,7 @@ input {
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
   /* 1 */
-  font: inherit;
+  font-family: "Open Sans", sans-serif !important;
   /* 2 */
 }
 
