--- a/src/components/atoms/select-component/select-component.css
+++ b/src/components/atoms/select-component/select-component.css
@@ -8,7 +8,7 @@
 }
 
 select {
-  font-family: inherit;
+  font-family: "Open Sans", sans-serif !important;
   font-size: 100%;
   font-weight: inherit;
   line-height: inherit;
