global open sans sans serif

--- a/src/components/molecules/footer-component/footer-component.css
+++ b/src/components/molecules/footer-component/footer-component.css
@@ -72,9 +72,11 @@ svg {
 /* styles */
 
 .font-sans {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  font-family: "Open Sans", sans-serif !important;
+
+  /* font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; */
 }
 
 .flex {
