--- a/src/global/global.css
+++ b/src/global/global.css
@@ -1,70 +1,103 @@
 /* fonts */
 
+html {
+  line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
+  -moz-tab-size: 4;
+  tab-size: 4;
+  font-family: "Open Sans", sans-serif, ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
+    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji";
+  font-feature-settings: normal;
+  font-variation-settings: normal;
+}
+
 @font-face {
-  font-family: "Open Sans";
+  /* font-family: "Open Sans"; */
+  font-family: "Open Sans", sans-serif !important;
+
   font-style: normal;
   font-weight: 400;
   font-display: swap;
   src: url("../assets/OpenSans-Regular.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif !important;
+
+  /* font-family: "Open Sans"; */
   font-style: italic;
   font-weight: 400;
   font-display: swap;
   src: url("../assets/OpenSans-Italic.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif !important;
+
+  /* font-family: "Open Sans"; */
   font-style: normal;
   font-weight: 500;
   font-display: swap;
   src: url("../assets/OpenSans-Medium.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif !important;
+
+  /* font-family: "Open Sans"; */
   font-style: italic;
   font-weight: 500;
   font-display: swap;
   src: url("../assets/OpenSans-MediumItalic.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif !important;
+
+  /* font-family: "Open Sans"; */
   font-style: normal;
   font-weight: 600;
   font-display: swap;
   src: url("../assets/OpenSans-SemiBold.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif !important;
+
+  /* font-family: "Open Sans"; */
   font-style: italic;
   font-weight: 600;
   font-display: swap;
   src: url("../assets/OpenSans-SemiBoldItalic.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif !important;
+
+  /* font-family: "Open Sans"; */
   font-style: normal;
   font-weight: 700;
   font-display: swap;
   src: url("../assets/OpenSans-Bold.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif !important;
+
+  /* font-family: "Open Sans"; */
   font-style: italic;
   font-weight: 700;
   font-display: swap;
   src: url("../assets/OpenSans-BoldItalic.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif !important;
+
+  /* font-family: "Open Sans"; */
   font-style: normal;
   font-weight: 800;
   font-display: swap;
   src: url("../assets/OpenSans-ExtraBold.ttf") format("truetype");
 }
 @font-face {
-  font-family: "Open Sans";
+  font-family: "Open Sans", sans-serif !important;
+
+  /* font-family: "Open Sans"; */
   font-style: italic;
   font-weight: 800;
   font-display: swap;
