--- a/src/components/atoms/checkbox-component/checkbox-component.css
+++ b/src/components/atoms/checkbox-component/checkbox-component.css
@@ -273,6 +273,7 @@ input::placeholder {
 }
 
 .text-base {
+  font-family: "Open Sans", sans-serif !important;
   font-size: 1rem;
   line-height: 1.5rem;
 }
